# task-manager-agent

./: .gitignore  README.md  pyproject.toml  reqs.txt
demos/: demo.ipynb  demo.py  demo2.py  live-demo.py  sounddevice-demo.py
docs/: notes.md  rsrcs.md  tasks.md
notebooks/: agent-dev.ipynb  demo.ipynb  ss_example_selection.ipynb  ss_for_tool_selection.ipynb  structured_output.ipynb  tool_calling_with_4B_params.ipynb
scripts/: input_device_scan.py
task-manager-agent/: agent.py  audio_worker.py  capture.py  capture_sd.py  main.py  task_manager.py  task_manager_agent.py  transcriptor.py
